# cohort-LLM

./: .gitignore  LICENSE  README.md  load.py  main.py  pyproject.toml  requirements.txt  streamlit_app.py
config/: cohort.toml  simulation.toml
output/: final_simulation_results.csv
src/: __init__.py
src/agentRWE/: __init__.py  load.py  patient_agent.py  pipeline.py  simulation_engine.py  utils.py  visualization.py  visualization_notebook.py
